@@ -21,6 +21,8 @@ version 0.9.2 - Not released, available at https://simupop.svn.sourceforge.net/s
   - NEW: Allow unordered lociPos specification in population(), lociNames will be
 		rearranged accordingly.
   - NEW: Allow single parameter to parameters loci, ploidy in initByValue and initByFreq.
+  - NEW: Remove parameter chrom from dumper(), allow single parameter input for 
+		parameter loci in this operator.
 		
 
 version 0.9.1 - (Rev 2330) Jan 13, 2009
